<resources>
    <string name="app_name">CalorieCounter2</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_save">Save</string>

    <string name="search_openfoodfacts_hint">Search OpenFoodFacts</string>

    <string name="close">Close</string>

    <string name="settings">Settings</string>
    <string name="journal_fragment">Journal</string>
    <string name="statistics_fragment">Statistics</string>
    <string name="food_search_fragment">Food Search</string>
    <string name="food_list_fragment">Food List</string>
    <string name="meal_list_fragment">Meal List</string>

    <string name="search">    Search</string>

    <!-- Food fragment strings -->
    <string name="food_fragment">Food</string>
    <string name="product_name">Name:</string>
    <string name="product_brands">Brands:</string>
    <string name="product_quantity">Package Size:</string>
    <string name="product_code">Code:</string>
    <string name="serving_size">Serving Size:</string>
    <string name="calories">Calories:</string>
    <string name="fat">Fat:</string>
    <string name="saturated_fat">Saturated Fat:</string>
    <string name="trans_fat">Trans Fat:</string>
    <string name="cholesterol">Cholesterol:</string>
    <string name="sodium">Sodium:</string>
    <string name="carbohydrate">Carbohydrate:</string>
    <string name="fibre">Fibre:</string>
    <string name="sugars">Sugars:</string>
    <string name="protein">Protein:</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>