<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".FoodFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow5"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:constraint_referenced_ids="foodNameTextView,productBrandsTextView,productCodeTextView,productQuantityTextView,caloriesTextView,saturatedFatTextView,cholesterolTextView,carbohydrateTextView,sugarsTextView"
            app:flow_verticalStyle="spread_inside"
            app:flow_wrapMode="none"
            app:layout_constraintBottom_toTopOf="@+id/button_save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:constraint_referenced_ids="foodNameEditTextNumber,productBrandsEditTextNumber,productCodeEditTextNumber"
            app:flow_verticalStyle="spread_inside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/flow5"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow10"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:constraint_referenced_ids="flow4,flow8,flow9"
            app:layout_constraintBottom_toBottomOf="@+id/flow5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/flow5" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:constraint_referenced_ids="productQuantityEditTextNumber,caloriesEditTextNumber,saturatedFatEditTextNumber,cholesterolEditTextNumber,carbohydrateEditTextNumber,sugarsEditTextNumber"
            app:flow_verticalStyle="spread_inside"
            app:flow_wrapMode="none"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="135dp" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow8"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:constraint_referenced_ids="servingSizeTextView,fatTextView,transFatTextView,sodiumTextView,fibreTextView,proteinsTextView"
            app:flow_verticalStyle="spread_inside"
            app:flow_wrapMode="none"
            tools:layout_editor_absoluteX="210dp"
            tools:layout_editor_absoluteY="135dp" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:constraint_referenced_ids="servingSizeEditTextNumber,fatEditTextNumber,transFatEditTextNumber,sodiumEditTextNumber,fibreEditTextNumber,proteinsEditTextNumber"
            app:flow_verticalStyle="spread_inside"
            app:flow_wrapMode="none"
            tools:layout_editor_absoluteX="353dp"
            tools:layout_editor_absoluteY="135dp" />

        <TextView
            android:id="@+id/foodNameTextView"
            style="@style/food_label"
            android:text="@string/product_name"
            tools:layout_editor_absoluteX="328dp"
            tools:layout_editor_absoluteY="13dp" />

        <EditText
            android:id="@+id/foodNameEditTextNumber"
            style="@style/food_text_box"
            tools:layout_editor_absoluteX="52dp"
            tools:layout_editor_absoluteY="518dp" />

        <TextView
            android:id="@+id/productBrandsTextView"
            style="@style/food_label"
            android:text="@string/product_brands" />

        <EditText
            android:id="@+id/productBrandsEditTextNumber"
            style="@style/food_text_box" />

        <TextView
            android:id="@+id/productQuantityTextView"
            style="@style/food_label"
            android:text="@string/product_quantity"
            android:textAlignment="gravity"
            tools:layout_editor_absoluteY="135dp" />

        <EditText
            android:id="@+id/productQuantityEditTextNumber"
            style="@style/food_text_box"
            tools:layout_editor_absoluteX="93dp"
            tools:layout_editor_absoluteY="549dp" />

        <TextView
            android:id="@+id/productCodeTextView"
            style="@style/food_label"
            android:text="@string/product_code"
            tools:layout_editor_absoluteY="103dp" />

        <EditText
            android:id="@+id/productCodeEditTextNumber"
            style="@style/food_text_box"
            android:enabled="false"
            android:focusable="false" />

        <TextView
            android:id="@+id/servingSizeTextView"
            style="@style/food_label"
            android:text="@string/serving_size" />

        <EditText
            android:id="@+id/servingSizeEditTextNumber"
            style="@style/food_text_box"
            tools:layout_editor_absoluteX="277dp"
            tools:layout_editor_absoluteY="135dp" />

        <TextView
            android:id="@+id/caloriesTextView"
            style="@style/food_label"
            android:text="@string/calories"
            tools:layout_editor_absoluteY="193dp" />

        <EditText
            android:id="@+id/caloriesEditTextNumber"
            style="@style/food_text_box"
            tools:layout_editor_absoluteX="385dp" />

        <TextView
            android:id="@+id/fatTextView"
            style="@style/food_label"
            android:text="@string/fat" />

        <EditText
            android:id="@+id/fatEditTextNumber"
            style="@style/food_text_box"
            tools:layout_editor_absoluteX="385dp" />

        <TextView
            android:id="@+id/saturatedFatTextView"
            style="@style/food_label"
            android:text="@string/saturated_fat"
            tools:layout_editor_absoluteY="238dp" />

        <EditText
            android:id="@+id/saturatedFatEditTextNumber"
            style="@style/food_text_box"
            tools:layout_editor_absoluteX="385dp" />

        <TextView
            android:id="@+id/transFatTextView"
            style="@style/food_label"
            android:text="@string/trans_fat" />

        <EditText
            android:id="@+id/transFatEditTextNumber"
            style="@style/food_text_box"
            tools:layout_editor_absoluteX="385dp" />

        <TextView
            android:id="@+id/cholesterolTextView"
            style="@style/food_label"
            android:text="@string/cholesterol" />

        <EditText
            android:id="@+id/cholesterolEditTextNumber"
            style="@style/food_text_box"
            tools:layout_editor_absoluteX="385dp" />

        <TextView
            android:id="@+id/sodiumTextView"
            style="@style/food_label"
            android:text="@string/sodium" />

        <EditText
            android:id="@+id/sodiumEditTextNumber"
            style="@style/food_text_box"
            tools:layout_editor_absoluteX="385dp" />

        <TextView
            android:id="@+id/carbohydrateTextView"
            style="@style/food_label"
            android:text="@string/carbohydrate" />

        <EditText
            android:id="@+id/carbohydrateEditTextNumber"
            style="@style/food_text_box"
            tools:layout_editor_absoluteX="385dp" />

        <TextView
            android:id="@+id/fibreTextView"
            style="@style/food_label"
            android:text="@string/fibre" />

        <EditText
            android:id="@+id/fibreEditTextNumber"
            style="@style/food_text_box"
            tools:layout_editor_absoluteX="385dp" />

        <TextView
            android:id="@+id/sugarsTextView"
            style="@style/food_label"
            android:text="@string/sugars"
            tools:layout_editor_absoluteX="222dp"
            tools:layout_editor_absoluteY="238dp" />

        <EditText
            android:id="@+id/sugarsEditTextNumber"
            style="@style/food_text_box"
            tools:layout_editor_absoluteX="385dp" />

        <TextView
            android:id="@+id/proteinsTextView"
            style="@style/food_label"
            android:text="@string/protein" />

        <!--<androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:barrierDirection="end"
                app:constraint_referenced_ids="textView1,textView2,textView3,textView4,textView5,textView6,textView7,textView8"
                tools:layout_editor_absoluteX="104dp" />-->

        <EditText
            android:id="@+id/proteinsEditTextNumber"
            style="@style/food_text_box" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!--<TextView
                android:id="@+id/textView1"
                style="@style/food_label"
                android:text="@string/product_name"
                app:layout_constraintBaseline_toBaselineOf="@id/editTextNumber1"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView2"
                style="@style/food_label"
                android:text="@string/product_code"
                app:layout_constraintBaseline_toBaselineOf="@id/editTextNumber2"
                tools:ignore="MissingConstraints" />

            <TextView
                style="@style/food_label"
                android:id="@+id/textView3"
                android:text="@string/serving_size"
                app:layout_constraintBaseline_toBaselineOf="@id/editTextNumber3"
                tools:ignore="MissingConstraints" />

            <TextView
                style="@style/food_label"
                android:id="@+id/textView4"
                android:text="@string/calories"
                app:layout_constraintBaseline_toBaselineOf="@id/editTextNumber4"
                tools:ignore="MissingConstraints" />

            <TextView
                style="@style/food_label"
                android:id="@+id/textView5"
                android:text="@string/fat"
                app:layout_constraintBaseline_toBaselineOf="@id/editTextNumber5"
                tools:ignore="MissingConstraints" />

            <TextView
                style="@style/food_label"
                android:id="@+id/textView6"
                android:text="@string/saturated_fat"
                app:layout_constraintBaseline_toBaselineOf="@id/editTextNumber6"
                tools:ignore="MissingConstraints" />

            <TextView
                style="@style/food_label"
                android:id="@+id/textView7"
                android:text="@string/trans_fat"
                app:layout_constraintBaseline_toBaselineOf="@id/editTextNumber7"
                tools:ignore="MissingConstraints" />

            <TextView
                style="@style/food_label"
                android:id="@+id/textView8"
                android:text="@string/cholesterol"
                app:layout_constraintBaseline_toBaselineOf="@id/editTextNumber8"
                tools:ignore="MissingConstraints" />

            <TextView
                style="@style/food_label"
                android:id="@+id/textView9"
                android:text="@string/sodium"
                app:layout_constraintBaseline_toBaselineOf="@id/editTextNumber9"
                tools:ignore="MissingConstraints" />

            <TextView
                style="@style/food_label"
                android:id="@+id/textView10"
                android:text="@string/carbohydrate"
                app:layout_constraintBaseline_toBaselineOf="@id/editTextNumber10"
                tools:ignore="MissingConstraints" />

            <TextView
                style="@style/food_label"
                android:id="@+id/textView11"
                android:text="@string/fibre"
                app:layout_constraintBaseline_toBaselineOf="@id/editTextNumber11"
                tools:ignore="MissingConstraints" />

            <TextView
                style="@style/food_label"
                android:id="@+id/textView12"
                android:text="@string/sugars"
                app:layout_constraintBaseline_toBaselineOf="@id/editTextNumber12"
                tools:ignore="MissingConstraints" />

            <TextView
                style="@style/food_label"
                android:id="@+id/textView13"
                android:text="@string/protein"
                app:layout_constraintBaseline_toBaselineOf="@id/editTextNumber13"
                tools:ignore="MissingConstraints" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:barrierDirection="end"
                app:constraint_referenced_ids="textView1,textView2,textView3,textView4,textView5,textView6,textView7,textView8"
                tools:layout_editor_absoluteX="104dp" />

            <EditText
                style="@style/food_text_box"
                android:id="@+id/editTextNumber1"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextNumber2"
                style="@style/food_text_box"
                android:enabled="false"
                android:focusable="false"
                app:layout_constraintTop_toBottomOf="@id/editTextNumber1" />

            <EditText
                style="@style/food_text_box"
                android:id="@+id/editTextNumber3"
                app:layout_constraintTop_toBottomOf="@id/editTextNumber2" />

            <EditText
                style="@style/food_text_box"
                android:id="@+id/editTextNumber4"
                app:layout_constraintTop_toBottomOf="@id/editTextNumber3" />

            <EditText
                style="@style/food_text_box"
                android:id="@+id/editTextNumber5"
                app:layout_constraintTop_toBottomOf="@id/editTextNumber4" />

            <EditText
                style="@style/food_text_box"
                android:id="@+id/editTextNumber6"
                app:layout_constraintTop_toBottomOf="@id/editTextNumber5" />

            <EditText
                style="@style/food_text_box"
                android:id="@+id/editTextNumber7"
                app:layout_constraintTop_toBottomOf="@id/editTextNumber6" />

            <EditText
                style="@style/food_text_box"
                android:id="@+id/editTextNumber8"
                app:layout_constraintTop_toBottomOf="@id/editTextNumber7" />

            <EditText
                style="@style/food_text_box"
                android:id="@+id/editTextNumber9"
                app:layout_constraintTop_toBottomOf="@id/editTextNumber8" />

            <EditText
                style="@style/food_text_box"
                android:id="@+id/editTextNumber10"
                app:layout_constraintTop_toBottomOf="@id/editTextNumber9" />

            <EditText
                style="@style/food_text_box"
                android:id="@+id/editTextNumber11"
                app:layout_constraintTop_toBottomOf="@id/editTextNumber10" />

            <EditText
                style="@style/food_text_box"
                android:id="@+id/editTextNumber12"
                app:layout_constraintTop_toBottomOf="@id/editTextNumber11" />

            <EditText
                style="@style/food_text_box"
                android:id="@+id/editTextNumber13"
                app:layout_constraintTop_toBottomOf="@id/editTextNumber12" />

            <Button
                android:id="@+id/button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_vertical"
                android:text="@string/save"
                app:layout_constraintEnd_toEndOf="@+id/editTextNumber13"
                app:layout_constraintStart_toStartOf="@+id/textView13"
                app:layout_constraintTop_toBottomOf="@+id/editTextNumber13" />-->


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>